[package]
name = "oa-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = "0.7"
bcrypt = "0.17"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
md5 = "0.7"
sha2 = "0.10"
async-stream = "0.3"
futures-util = "0.3"
